# CloakQR

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  SECURITY.md  vcpkg.json  what_we_done.md
.github/: copilot-instructions.md
.github/instructions/: mermaid.instructions.md
.github/workflows/: ci.yml
android/: AndroidManifest.xml
cmake/: dependencies.cmake
deploy/android/: build.gradle
docs/: threat-model.md
qml/: main.qml
qml/common/: Footer.qml  Header.qml  qmldir
qml/views/: BatchScanPage.qml  DesignStudioPanel.qml  GeneratorPage.qml  HistoryPage.qml  PaywallSheet.qml  SafePreviewDialog.qml  ScannerPage.qml  qmldir
resources/: qml.qrc
resources/i18n/: ar.ts  en.ts  es.ts  fr.ts
src/: main.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  logger.cpp  logger.h  qrdata.cpp  qrdata.h  qrdecoder.cpp  qrdecoder.h  qrencoder.cpp  qrencoder.h  qrgenerator.cpp  qrgenerator.h  qrtypes.h
src/platform/: CMakeLists.txt
src/plugins/: CMakeLists.txt  ibatchgenerationplugin.h  ilogooverlayplugin.h  ipdfexportplugin.h  plugininterface.h
src/plugins/stub/: CMakeLists.txt  README.md  stubplugins.h
src/services/: CMakeLists.txt  appengine.cpp  appengine.h  billingbridge.cpp  billingbridge.h  cryptohelper.cpp  cryptohelper.h  fileexporter.cpp  fileexporter.h  scanhistorymodel.cpp  scanhistorymodel.h
src/ui/: CMakeLists.txt  qmlbindings.cpp  qmlbindings.h  qrimageprovider.cpp  qrimageprovider.h
tests/unit/: CMakeLists.txt  tst_cryptohelper.cpp  tst_qrgenerator.cpp  tst_scanhistory.cpp
